# bored-game

client/: package.json  tsconfig.json
client/docs/: index.html  index.js  index.js.map  styles.css
client/src/: index.ts
server/: CMakeLists.txt
server/src/: errors.h  main.cpp  mainController.cpp  mate.cpp  mate.h  monitor.cpp  monitor.h  room.cpp  room.h  utility.h
